--- a/index.html
+++ b/index.html
@@ -13,34 +13,37 @@
 он красивый, ни то, какой он удобный. Никому не понравится, когда все тормозит. Мы регулярно 
 добавляем в Яндекс.Почту новую функциональность, иногда — исправляем ошибки, а это значит, 
 у нас постоянно появляются новый код и новая логика. Всё это напрямую влияет на скорость 
-работы интерфейса.</td><td><img src="https://goo.gl/99MHup" alt="Логотип Яндекс Почты"></td>
-</tr>
-</table>
-<h2>Что мы измеряем</h2>
+работы интерфейса.</td><td><img src="https://goo.gl/99MHup" alt="Логотип Яндекс Почты" 
+usemap="#yandex"></td></tr></table>
+<map name="yandex"><area shape="default" href="https://mail.yandex.ru/" 
+alt="Янндекс почта"></map>
+<h2><em>Что мы измеряем</em></h2>
 <table>
 <tr><td>Этапы первой загрузки:</td><td>Этапы отрисовки любой страницы:</td></tr>
 <tr><td><ul><li>подготовка;</li><li>загрузка статики (HTTP-запрос и парсинг);</li><li>исполнение 
 модулей;</li><li>инициализация базовых объектов;</li><li>отрисовка.</li></ul></td><td><ul><li>
 подготовка к запросу на сервер;</li><li>запрос данных с сервера;</li><li>шаблонизация;</li><li>
 обновление DOM.</li></ul></td></tr></table>
-<table><tr><td>— «Ок, теперь у нас есть метрики, мы можем 
+<blockquote><p>— «Ок, теперь у нас есть метрики, мы можем 
 отправить их на сервер» - говорим мы<br>— «Что же дальше?» - вопрошаете вы<br>— «А давай 
-построим график!» - отвечаем мы<br>— «А что будем считать?» - уточняете вы</td></tr>
-</table>
+построим график!» - отвечаем мы<br>— «А что будем считать?» - уточняете вы</p></blockquote>
 <p>Как вы знаете, медиана – это серединное, а не среднее значение в выборке. Если у нас имеются 
 числа 1, 2, 2, 3, 8, 10, 20, то медиана – 3, а среднее – 6,5. В общем случае медиана отлично 
 показывает, сколько грузится средний пользователь.</p>
 <p>В случае ускорения или замедления медиана, конечно, изменится. Но она не может. В общем случае 
 медиана отлично показывает, сколько грузится средний пользователь.</p>
-<p>APDEX - метрика, которая сразу говорит: хорошо или плохо. 
+<dl>
+<dt>APDEX</dt>
+<dd>метрика, которая сразу говорит: хорошо или плохо. 
 Метрика работает очень просто. Мы выбираем временной интервал [0; t], такой, что если время 
 показа страницы попало в него, то пользователь счастлив. Берем еще один интервал, (t; 4t] (в 
 четыре раза больше первого), и считаем, что если страница показана за это время, то пользователь 
-в целом удовлетворен скоростью работы, но уже не настолько счастлив. И применяем формулу:</p>
+в целом удовлетворен скоростью работы, но уже не настолько счастлив. И применяем формулу:</dd>
+</dl>
 <p>(кол-во счастливых пользователей + кол-во удовлетворенных / 2) / (кол-во всех).<br>Получается 
 значение от нуля до единицы, которое, видимо, лучше всего показывает, хорошо или плохо работает 
 почта.</p>
-<h2>Как мы измеряем</h2>
+<h2><em>Как мы измеряем</em></h2>
 <p>Сейчас модуль обновления сам логирует все свои стадии, и можно легко понять причину 
 замедления: медленнее стал отвечать сервер либо слишком долго выполняется JavaScript. Выглядит 
 это примерно так:</p>
@@ -53,7 +56,7 @@ Date.now();</code></p>
 </code></p>
 <p>И на сервер прилетают подобные записи:</p>
 <p><code>serverResponse=50&#38;domUpdate=60</code></p>
-<h2>Как мы ускоряем</h2>
+<h2><em>Как мы ускоряем</em></h2>
 <table><tr><td>Чтобы снизить время загрузки почты при выходе 
 новых версий, мы уже делаем следующее:</td><td></td></tr><tr><td><ul><li>включаем gzip;</li><li>
 выставляем заголовки кэширования;</li><li>фризим CSS, JS, шаблоны и картинки;</li><li>используем 
@@ -91,7 +94,7 @@ diff-patch-match</p>
 есть три свойства. k — названия ключа в localStorage для этого ресурса. p — патч для ресурса, 
 который сгенерировал vcdiff. s — чексумма для ресурса актуальной версии, чтобы потом можно было 
 проверить правильность наложения патча на клиенте. Чексумма вычисляется по алгоритму Флетчера.</p>
-<p>Алгоритм Бройдена — Флетчера — Гольдфарба — Шанно (BFGS) — итерационный метод численной 
+<p><dfn>Алгоритм Бройдена — Флетчера — Гольдфарба — Шанно (BFGS)</dfn> — итерационный метод численной 
 оптимизации, предназначенный для нахождения локального максимума/минимума нелинейного функционала 
 без ограничений.</p>
 <p><img src="https://goo.gl/VUKCDg" alt="алгоритм" width="600"></p>
@@ -100,14 +103,16 @@ diff-patch-match</p>
 md5 - 128-битный алгоритм хеширования. Предназначен для создания «отпечатков» или дайджестов 
 сообщения произвольной длины и последующей проверки их подлинности.</p>
 <p>Потому что он быстрый, компактный и легок в реализации.</p>
-<p>Итог</p>
-<p>Фактически мы экономим 80-90% трафика. Размер загружаемой статитки в байтах:</p>
-<table><tr><td>Релиз</td><td>С патчем</td><td>Без патча</td></tr><tr><td>7.7.20</td><td>
-397</td><td>174 549</td></tr><tr><td>7.7.21</td><td>383</td><td>53 995</td></tr><tr><td>7.7.22
-</td><td>483</td><td>3 995</td></tr></table>
-<table><tr><td>Автор: @doochik</td></tr><tr>
-<td>С++ разработик</td></tr><tr><td>Электронная почта: (doochik@yandex-team.ru)</td></tr>
-<tr><td>Компания: Яндекс</td></tr></table>
+<h3>Итог</h3>
+<p>Фактически мы экономим 80-90% трафика.</p>
+<table><caption>Размер загружаемой статитки в байтах:</caption><tr><td>Релиз</td><td>С патчем</td>
+<td>Без патча</td></tr><tr><td>7.7.20</td><td>397</td><td>174 549</td></tr><tr><td>7.7.21</td><td>
+383</td><td>53 995</td></tr><tr><td>7.7.22</td><td>483</td><td>3 995</td></tr></table>
+<p>Автор: @doochik</p>
+<p>С++ разработик</p>
+<p>Электронная почта: (doochik@yandex-team.ru)</p>
+<div>Компания: Яндекс</div>
+<p>&#160;</p>
 <p>Комментарии (3):</p>
 <p>- Mogaika (mogaika@yandex-team.ru) 30 ноября 2014 в 17:05<br>А 
 можете привести сравнение, на сколько быстрее грузится lite версия?</p>
@@ -121,6 +126,9 @@ md5 - 128-битный алгоритм хеширования. Предназн
 <p>- alexeimois (test@yandex.ru) 22 ноября 2014 в 17:35<br>Мы 
 измеряем скорость загрузки с помощью Яндекс.Метрики: help.yandex.ru/metrika/reports/ monit
 oring_timing.xml</p>
-<p>© Яндекс, help@yandex.ru, Хохрякова, 10</p>
+<p>©&#160;<a href="https://www.yandex.ru/">Яндекс</a>,&#160;<a href="https://yandex.ru/support/">
+help@yandex.ru</a>, Хохрякова, 10</p>
+<form action="https://mail.yandex.ru/"><input type="submit" value="Перейти на 
+Яндекс Почту"></form>
 </body>
 </html>
