--- a/index.html
+++ b/index.html
@@ -108,10 +108,10 @@ md5 - 128-битный алгоритм хеширования. Предназн
 <table><caption>Размер загружаемой статитки в байтах:</caption><tr><td>Релиз</td><td>С патчем</td>
 <td>Без патча</td></tr><tr><td>7.7.20</td><td>397</td><td>174 549</td></tr><tr><td>7.7.21</td><td>
 383</td><td>53 995</td></tr><tr><td>7.7.22</td><td>483</td><td>3 995</td></tr></table>
-<p>Автор: @doochik</p>
+<hr><p>Автор: @doochik</p>
 <p>С++ разработик</p>
 <p>Электронная почта: (doochik@yandex-team.ru)</p>
-<div>Компания: Яндекс</div>
+<div>Компания: Яндекс</div><hr>
 <p>&#160;</p>
 <p>Комментарии (3):</p>
 <p>- Mogaika (mogaika@yandex-team.ru) 30 ноября 2014 в 17:05<br>А 
